# PointCloudsVR

./: .gitattributes  .gitignore  CMakeLists.txt  Copyright.txt  README.md
CMakeModules/: FindOpenFrames.cmake  FindOpenVR.cmake  FindOsgEarth.cmake
data/images/: Stars_HYGv3.txt  mar0kuu2.tif
data/las/: LAS12_Sample_withRGB_Quick_Terrain_Modeler.las
data/osgearth/: earthmap.earth  earthmap_finesse.earth
data/osgearth/color_ramp_files/: elevation_ramp.clr  elevation_ramp_green.clr  elevation_ramp_yellow.clr
data/particles/: Gaia_selected_columns..csv  KnownGaiaStars.csv
data/particles/KnownGaiaStars/DR1/: Beta_Pictoris.csv  Cotten-Song_Disks.csv  Tucana-Horologium.csv
data/particles/KnownGaiaStars/DR2/: 118_Tau.csv  1_0730-HH-G1-AStarGroup2.csv  1_0730-HH-G1-AStarGroup3.csv  1_0730-HH-G1.csv  1_0730-HH-G2-BStarGroup2.csv  1_0730-HH-G2.csv  32_Or.csv  Alpha_Per.csv  Alpha_Per2.csv  Argus.csv  Beta_Pic.csv  Beta_Pictoris.csv  Ca-Ne.csv  Cas-Tau.csv  Cep_OB2.csv  Cep_OB6.csv  Cha-Near.csv  Col_121.csv  Columba.csv  Coma_Ber.csv  Cor_Aus.csv  Cotten_Song.csv  DD_GaiaXmatch_v1.csv  DR2-AB Doradus.csv  DR2-Carina.csv  DR2-TW_Hya.csv  DR2-Tuc-Hor.csv  Disk_Detective.csv  Eps_Cha.csv  Eta_Cha.csv  Faherty_1.CSV  Faherty_2.CSV  Faherty_3.CSV  Faherty_4.csv  Her-Lyr.csv  Hyades.csv  IC_348.csv  Lac_OB1.csv  Lwr_Cen_Crx.csv  Oct-Nr.csv  (+16 more)
data/particles/SelectionSpheres/DR2/: SelectionSphere1.csv
data/particles/tempIsochrones/: isochrone_100_Myr.csv  isochrone_10_Myr.csv  isochrone_11_Myr.csv  isochrone_12_Myr.csv  isochrone_20_Myr.csv  isochrone_2_Myr.csv  isochrone_30_Myr.csv  isochrone_40_Myr.csv  isochrone_4_Myr.csv  isochrone_50_Myr.csv  isochrone_5_Myr.csv  isochrone_60_Myr.csv  isochrone_6_Myr.csv  isochrone_70_Myr.csv  isochrone_7_Myr.csv  isochrone_80_Myr.csv  isochrone_8_Myr.csv  isochrone_90_Myr.csv  isochrone_9_Myr.csv
shaders/: Marker_CirclePulse.frag  Marker_Plus.frag  Marker_Square.frag  MarsAtmosphere.frag  MarsShortTrail.frag  MarsShortTrail.vert
src/: CMakeLists.txt  DarwinNetcdfs.cpp  DarwinNetcdfs.hpp  DiskDrawer.cpp  DiskDrawer.hpp  Filter.hpp  FlowScene.cpp  FlowScene.hpp  FreeformLineDrawer.cpp  FreeformLineDrawer.hpp  GaiaScene.cpp  GaiaScene.hpp  GaiaSphere.cpp  GaiaSphere.hpp  GaiaStar.cpp  GaiaStar.hpp  LasModel.cpp  LasModel.hpp  LasModelScene.cpp  LasModelScene.hpp  LavaTubeScene.cpp  LavaTubeScene.hpp  Mars.cpp  Mars.hpp  MarsScene.cpp  MarsScene.hpp  ModelScene.cpp  ModelScene.hpp  PCVR_Controller.cpp  PCVR_Controller.hpp  PCVR_Math.cpp  PCVR_Math.hpp  PCVR_OvrDevice.cpp  PCVR_OvrDevice.hpp  PCVR_Scene.cpp  PCVR_Scene.hpp  PCVR_Selection.cpp  PCVR_Selection.hpp  PCVR_Tool.cpp  PCVR_Tool.hpp  (+16 more)
src/Qt/dialog/: circumfDialog.ui
src/Qt/menu/: default - Copy.ui  default.ui  flow.ui  gaia.ui  mars.ui
src/standalone/: PointCloudsVR_Canopy_Puerto_Rico.cmd  PointCloudsVR_Flow.cmd  PointCloudsVR_Gaia.cmd  PointCloudsVR_Lava_Tubes.cmd  PointCloudsVR_Lianas_Tree_Puerto_Rico.cmd  PointCloudsVR_Mars.cmd  PointCloudsVR_Tree_Puerto_Rico.cmd
